--- a/app/templates/storage/list.html
+++ b/app/templates/storage/list.html
@@ -82,6 +82,10 @@
     background: #e8f2ff !important;
     box-shadow: inset 0 0 0 2px #3b82f6;
   }
+  .fila-explorer {
+    user-select: none;
+    cursor: pointer;
+  }
 </style>
 
 <script>
